crates/acus-cli/tests/snapshots/cli__find_caps_hits.snap
---
source: crates/acus-cli/tests/cli.rs
expression: "acus(&[\"find\", \"needle\", \"--max-hits\", \"1\"]).1"
---
README.md
@Demo::Usage 5-7
7	Run the needle.
… 4 more hits in 2 files (narrow with -g/-e or raise --max-hits)
