crates/acus-cli/tests/snapshots/cli__outline_dir.snap
---
source: crates/acus-cli/tests/cli.rs
expression: "acus(&[\"outline\", \".\", \"--depth\", \"1\"]).1"
---
README.md markdown 7
h1 Demo 1-7
src/lib.rs rust 17
struct Parser 1-3
impl Parser 5-15
web/App.svelte svelte 7
function greet 2-4
