crates/acus-cli/tests/snapshots/cli__outline_file.snap
---
source: crates/acus-cli/tests/cli.rs
expression: "acus(&[\"outline\", \"src/lib.rs\"]).1"
---
src/lib.rs rust 17
struct Parser 1-3
impl Parser 5-15
  fn new 6-8
  fn parse 10-14
