crates/acus-cli/tests/snapshots/cli__show_symbol_suffix_range_and_markdown.snap
---
source: crates/acus-cli/tests/cli.rs
expression: "acus(&[\"show\", \"src/lib.rs#parse\", \"src/lib.rs:1-3\", \"README.md#Usage\"]).1"
---
== src/lib.rs#Parser::parse 10-14
10	    pub fn parse(&mut self, input: &str) -> usize {
11	        let needle = input.len();
12	        self.pos += needle;
13	        self.pos
14	    }
== src/lib.rs 1-3
1	pub struct Parser {
2	    pos: usize,
3	}
== README.md#Demo::Usage 5-7
5	## Usage
6	
7	Run the needle.
